[FIX] fix white space mobile responsive and add some margin about

--- a/assets/styles/basics/_global.scss
+++ b/assets/styles/basics/_global.scss
@@ -39,6 +39,7 @@
   @media (max-width: 720px) {
     font-size: font-size('sublarge');
     margin-left: spacing('small');
+    white-space: initial;
   }
 }
 
