--- a/assets/styles/layout/new_default/_right.scss
+++ b/assets/styles/layout/new_default/_right.scss
@@ -164,7 +164,10 @@
   z-index: 5;
 
   @media (max-width: 720px) {
+    top: 0;
+    bottom: initial;
     left: -85vw;
+    height: auto;
   }
 }
 
@@ -186,6 +189,7 @@
   margin: spacing('small');
 
   @media (max-width: 720px) {
+    margin-top: 20%;
     max-width: 90%;
     font-size: font-size('regular');
   }
@@ -221,6 +225,8 @@
   font-family: $maison_mono;
 
   @media (max-width: 720px) {
+    position: relative;
+    margin: spacing('small');
     font-size: font-size('regular');
     text-align: center;
   }
